--- a/app/src/main/res/layout/fragment_buyer_dashboard.xml
+++ b/app/src/main/res/layout/fragment_buyer_dashboard.xml
@@ -3,13 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.buyerSection.presentation.buyerdashboard.BuyerDashboardFragment">
-
+    tools:context=".features.buyerSection.presentation.buyerdashboard.BuyerDashboardFragment"
+    >
 
     <GridView
+        android:layout_margin="24dp"
         android:id="@+id/fragmentBuyerDashboardGridView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:numColumns="3" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numColumns="1"
+        android:gravity="center"
+        android:verticalSpacing="24dp"
+        android:layout_centerHorizontal="true"
+        />
 
 </RelativeLayout>
