--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -72,8 +72,12 @@
         android:id="@+id/fragmentChangePasswordConfirmButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:text="@string/confirm"
-    />
+        android:background="@drawable/wide_button"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        />
 
     <ProgressBar
         android:layout_width="wrap_content"
