--- a/app/src/main/res/layout/fragment_full_user_profile.xml
+++ b/app/src/main/res/layout/fragment_full_user_profile.xml
@@ -14,31 +14,34 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        android:indeterminateTint="@color/colorPrimary"
         />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:paddingBottom="36dp">
+
         <RelativeLayout
             android:id="@+id/layoutFullUserProfileDetails"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
+
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/imageCardView"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
-                app:cardCornerRadius="60dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp">
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="60dp">
+
                 <ImageView
                     android:id="@+id/fragmentFullUserProfileImageViewProfile"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_baseline_profile_24"
-                  />
+                    android:src="@drawable/ic_baseline_profile_24" />
             </com.google.android.material.card.MaterialCardView>
 
             <Button
@@ -59,10 +62,9 @@
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:orientation="vertical"
                 android:layout_below="@id/imageCardView"
-                >
+                android:layout_marginTop="16dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -247,30 +249,32 @@
                     android:textStyle="bold" />
 
 
-
                 <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Edit Personal Info"
-                    android:background="@color/colorPrimary"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginStart="16dp"
                     android:id="@+id/fragmentFullUserProfileEditPersonalInfoButton"
-                    />
-
-                <androidx.appcompat.widget.AppCompatButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Change Password"
-                    android:background="@color/colorPrimary"
-                    android:textColor="@color/white"
-                    android:layout_marginTop="8dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/wide_button"
+                    android:drawableLeft="@drawable/ic_baseline_edit_24"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="8dp"
+                    android:text="@string/edit_personal_info"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white" />
+
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/fragmentFullUserProfileChangePasswordButton"
-                    />
-
-
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/wide_button"
+                    android:drawableLeft="@drawable/ic_baseline_key_24"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="8dp"
+                    android:text="@string/change_password"
+                    android:textColor="@color/white" />
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
