--- a/app/src/main/res/layout/layout_order_status_items.xml
+++ b/app/src/main/res/layout/layout_order_status_items.xml
@@ -1,73 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="10dp"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="2dp"
         >
+
         <ImageView
             android:id="@+id/layoutOrderStatusImageView"
             android:layout_width="100dp"
-            android:layout_height="110dp"
+            android:layout_height="100dp"
             android:layout_centerVertical="true"
-            android:src="@color/colorPrimary"
             android:layout_marginStart="8dp"
-            />
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/image_place_holder" />
 
         <TextView
             android:id="@+id/layoutOrderStatusProductNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="8dp"
             android:layout_toEndOf="@id/layoutOrderStatusImageView"
-            android:text="Product Name" />
+            android:text="Product Name"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/txtQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layoutOrderStatusProductNameTextView"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@id/layoutOrderStatusImageView"
+            android:text="@string/quantity" />
+
         <TextView
             android:id="@+id/layoutOrderStatusOrderQuantityTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/layoutOrderStatusImageView"
             android:layout_below="@id/layoutOrderStatusProductNameTextView"
-            android:layout_marginTop="8dp"
-            android:text="Item Quantity"
             android:layout_marginStart="8dp"
-            />
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@id/txtQuantity"
+            android:text="@string/quantity" />
 
 
         <TextView
             android:id="@+id/textStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/layoutOrderStatusImageView"
             android:layout_below="@id/layoutOrderStatusOrderQuantityTextView"
-            android:layout_marginTop="8dp"
-            android:text="status"
             android:layout_marginStart="8dp"
-            />
-        <TextView
-            android:id="@+id/layoutOrderStatusOrderStatusTextView"
+            android:layout_marginTop="12dp"
+            android:layout_toEndOf="@id/layoutOrderStatusImageView"
+            android:text="@string/status" />
+
+
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/textStatus"
             android:layout_below="@id/layoutOrderStatusOrderQuantityTextView"
-            android:layout_marginTop="8dp"
-            android:text="active"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@id/textStatus"
+            android:id="@+id/layoutOrderStatusItemsStatusCard"
+            app:strokeColor="@color/colorPrimary"
+            app:strokeWidth="1dp"
+            >
+            <TextView
+                android:id="@+id/layoutOrderStatusOrderStatusTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/layoutOrderStatusOrderQuantityTextView"
+                android:layout_toEndOf="@id/textStatus"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="active"
+                android:layout_gravity="center"
+                />
+        </com.google.android.material.card.MaterialCardView>
+
+        <TextView
+            android:id="@+id/txtTotalPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/layoutOrderStatusItemsStatusCard"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@id/layoutOrderStatusImageView"
+            android:text="@string/total_rs"
+            android:textColor="@color/colorRed"
             />
+
         <TextView
             android:id="@+id/layoutOrderStatusTotalPriceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/layoutOrderStatusImageView"
-            android:layout_below="@id/layoutOrderStatusOrderStatusTextView"
-            android:layout_marginTop="8dp"
-            android:text="Total Price"
+            android:layout_below="@id/layoutOrderStatusItemsStatusCard"
             android:layout_marginStart="8dp"
-            />
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@id/txtTotalPrice"
+            android:text="Total Price" />
 
     </RelativeLayout>
 
