--- a/app/src/main/res/layout/layout_product_status_item.xml
+++ b/app/src/main/res/layout/layout_product_status_item.xml
@@ -4,6 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="2dp"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="8dp"
     >
 
     <RelativeLayout
@@ -12,31 +15,51 @@
         android:layout_margin="2dp"
         >
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
             android:id="@+id/layoutProductStatusItemImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_alignParentStart="true"
-            android:src="@color/purple_200"
-            />
+            android:src="@drawable/image_place_holder"
+            android:scaleType="centerCrop"
+            android:layout_margin="4dp"
+             />
+
         <TextView
             android:id="@+id/layoutActiveProductItemProductNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Product Name"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@id/layoutProductStatusItemImageView"
             android:layout_marginStart="16dp"
+            android:layout_toEndOf="@id/layoutProductStatusItemImageView"
+            android:text="@string/product_name"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold"
             />
+
         <TextView
-            android:id="@+id/layoutActiveProductItemProductPriceTextView"
+            android:id="@+id/textRs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Product Price"
+            android:text="Rs"
             android:textColor="@color/colorRed"
             android:layout_toEndOf="@id/layoutProductStatusItemImageView"
             android:layout_below="@id/layoutActiveProductItemProductNameTextView"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:textSize="14sp"
+            />
+        <TextView
+            android:id="@+id/layoutActiveProductItemProductPriceTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/price"
+            android:layout_toEndOf="@id/textRs"
+            android:layout_below="@id/layoutActiveProductItemProductNameTextView"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:textSize="14sp"
+
             />
 
         <com.google.android.material.card.MaterialCardView
@@ -52,18 +75,19 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/layoutProductStatusItemChangeProductStatusButton"
-            android:layout_width="80dp"
+            android:layout_width="85dp"
             android:layout_height="30dp"
-            android:text="@string/status"
-            android:layout_toEndOf="@id/layoutProductStatusItemImageView"
             android:layout_below="@id/layoutActiveProductItemProductPriceTextView"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:background="@color/colorPrimary"
-            android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="4dp"
-            />
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="2dp"
+            android:layout_toEndOf="@id/layoutProductStatusItemImageView"
+            android:background="@drawable/very_small_button"
+            android:text="@string/status"
+            android:padding="4dp"
+            android:textSize="12sp"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
 
         <ImageView
             android:id="@+id/layoutProductStatusItemDeleteProductButton"
