--- a/app/src/main/res/layout/fragment_buy_now_details.xml
+++ b/app/src/main/res/layout/fragment_buy_now_details.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".features.buyNow.presentation.orderDetails.BuyNowOrderDetailsFragment">
+    tools:context=".features.buyNow.presentation.orderDetails.BuyNowOrderDetailsFragment"
+    android:id="@+id/fragmentBuyNowDetailsScrollView"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -109,6 +111,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="16dp"
             >
 
             <ImageView
@@ -117,12 +120,14 @@
                 android:layout_height="100dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/colorPrimary" />
+                android:scaleType="centerCrop"
+                android:src="@drawable/image_place_holder" />
 
             <TextView
                 android:id="@+id/textViewLayoutOrderItemsProductName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_toEndOf="@id/imageViewLayoutOrderItemsProductImage"
                 android:text="Product Name"
@@ -134,9 +139,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textViewLayoutOrderItemsProductName"
-                android:layout_toEndOf="@id/imageViewLayoutOrderItemsProductImage"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_toEndOf="@id/imageViewLayoutOrderItemsProductImage"
                 android:text="Price"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -146,6 +152,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/textViewLayoutOrderItemsItemProductPrice"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_toEndOf="@id/imageViewLayoutOrderItemsProductImage"
@@ -157,6 +164,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_marginTop="36dp"
+                android:layout_marginEnd="8dp"
                 >
                 <ImageView
                     android:id="@+id/layoutOrderItemIncreaseQuantityImageView"
@@ -201,7 +210,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:text="Subtotal"
+                android:text="@string/subtotal"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
@@ -224,7 +233,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="1"
                 android:layout_column="0"
-                android:text="Shipping Fees"
+                android:text="@string/shipping_fees"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
@@ -251,7 +260,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="2"
                 android:layout_column="0"
-                android:text="Total"
+                android:text="@string/total_rs"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
@@ -269,28 +278,22 @@
                 android:layout_marginEnd="16dp"
                 android:textColor="@color/colorRed"
                 />
-
-
-
-
-
         </GridLayout>
-
-
-
-
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Payment Options"/>
+            android:text="@string/payment_options"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            />
 
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Select Payment Method"
+            android:hint="@string/select_payment_method"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
@@ -305,16 +308,31 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:indeterminateTint="@color/colorPrimary"
+            android:visibility="gone"
+            android:id="@+id/fragmentBuyNowDetailsProgressBar"
+            />
 
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/fragmentBuyNowPlaceOrderButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Place Order"
+            android:text="@string/place_order"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/white"
             android:textAllCaps="false"
+            android:textSize="20sp"
+            android:layout_marginTop="18dp"
             />
+
 
     </LinearLayout>
 
