--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -38,15 +38,14 @@
             android:layout_height="wrap_content"
             android:columnCount="2"
             android:rowCount="3"
-            android:layout_above="@id/buttonCartFragmentCheckOut"
-            >
+           >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
                 android:layout_row="0"
                 android:layout_column="0"
-                android:text="Subtotal"
+                android:text="@string/subtotal"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
@@ -58,7 +57,7 @@
                 android:layout_columnWeight="0"
                 android:layout_row="0"
                 android:layout_column="1"
-                android:text="Subtotal (3 items)"
+                android:text="@string/subtotal"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="16dp"
@@ -69,7 +68,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="1"
                 android:layout_column="0"
-                android:text="Shipping Fees"
+                android:text="@string/shipping_fees"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
@@ -93,7 +92,7 @@
                 android:layout_columnWeight="1"
                 android:layout_row="2"
                 android:layout_column="0"
-                android:text="Total"
+                android:text="@string/total_rs"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="16dp"
@@ -117,8 +116,8 @@
             android:id="@+id/buttonCartFragmentCheckOut"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Check Out"
-            android:layout_alignParentBottom="true"
+            android:text="@string/check_out"
+            android:textAllCaps="false"
             android:textColor="@color/white"
             android:background="@color/colorPrimary"
             />
