--- a/app/src/main/res/layout/fragment_discontinued_products.xml
+++ b/app/src/main/res/layout/fragment_discontinued_products.xml
@@ -11,5 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/fragmentDiscontinuedProductsProgressBar"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:indeterminateTint="@color/colorPrimary"
+        android:layout_marginBottom="36dp"
+        android:visibility="gone"
+        />
 
 </RelativeLayout>
