--- a/app/src/main/res/layout/fragment_edit_personal_info.xml
+++ b/app/src/main/res/layout/fragment_edit_personal_info.xml
@@ -76,7 +76,7 @@
             android:id="@+id/headerGender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Gender"
+            android:text="@string/gender"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginStart="32dp"
@@ -98,7 +98,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/radio_button_male"
-                android:buttonTint="@color/design_default_color_primary"
+                android:buttonTint="@color/colorPrimary"
                 />
             <RadioButton
                 android:id="@+id/fragmentEditPersonalInfoRadioButtonFemale"
@@ -106,14 +106,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/radio_button_female"
                 android:layout_marginStart="24dp"
-                android:buttonTint="@color/design_default_color_primary"
+                android:buttonTint="@color/colorPrimary"
                 />
         </RadioGroup>
         <TextView
             android:id="@+id/headerDOB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Date of Birth"
+            android:text="@string/dob"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginStart="32dp"
@@ -221,6 +221,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
+            android:indeterminateTint="@color/colorPrimary"
             />
 
     </LinearLayout>
