--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -9,6 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="48dp"
         >
 
     <LinearLayout
@@ -16,7 +17,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:id="@+id/fragmentEditProductLayout"
-        android:visibility="gone"
+        android:layout_marginBottom="48dp"
         >
 
     <com.google.android.material.textfield.TextInputLayout
@@ -95,11 +96,40 @@
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
             />
+        <Button
+            android:id="@+id/buttonProductQuantityUnitCattle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+            android:text="@string/cattle"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
+            />
 
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
 
-    <com.google.android.material.textfield.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/select_city"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            >
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteEditProductProductCity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+        <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -147,18 +177,23 @@
         android:text="@string/update"
         android:layout_gravity="center"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/wide_button"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
         />
 
     </LinearLayout>
 
 
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editProductFragmentProgressBar"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        />
+        <ProgressBar
+            android:id="@+id/editProductFragmentProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="48dp"
+            android:indeterminateTint="@color/colorPrimary"
+            />
 
 
     </RelativeLayout>
