--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,12 +13,15 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:id="@+id/fragmentProfileProgressBar"
+        android:indeterminateTint="@color/colorPrimary"
+        android:layout_marginBottom="24dp"
         />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fragmentProfileDetailsLayout"
+        android:paddingBottom="76dp"
         android:visibility="gone"
         >
         <com.google.android.material.card.MaterialCardView
@@ -51,38 +54,40 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/fragmentProfileFullProfileButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewProfileFragName"
             android:layout_marginStart="24dp"
             android:layout_marginTop="24dp"
-            android:background="@color/colorTransparent"
-            android:text="See Full Profile"
+            android:background="@drawable/wide_button"
+            android:text="@string/see_full_profile"
             android:textAllCaps="false"
-            android:textColor="@color/colorGrey" />
+            android:textColor="@color/white"
+            />
 
         <TextView
             android:id="@+id/textBuyersSection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/fragmentProfileFullProfileButton"
-            android:text="buyers Section"
-            android:layout_marginTop="24dp"
             android:layout_marginStart="24dp"
-            />
+            android:layout_marginTop="24dp"
+            android:text="@string/buyers_section" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonBuyersSection"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/textBuyersSection"
             android:layout_marginStart="24sp"
             android:layout_marginTop="8dp"
-            android:text="Buyers Section"
-            android:textSize="10sp" />
-
+            android:text="Buyer Dashboard"
+            android:background="@drawable/wide_button"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            />
 
         <TextView
             android:id="@+id/textSellersSection"
@@ -91,39 +96,36 @@
             android:layout_below="@id/buttonBuyersSection"
             android:layout_marginStart="24dp"
             android:layout_marginTop="16dp"
-            android:text="sellers Section" />
+            android:text="@string/seller_section" />
 
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonSetupStore"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/textSellersSection"
             android:layout_marginStart="24sp"
             android:layout_marginTop="8dp"
-            android:text="Setup Store"
-            android:visibility="gone" />
+            android:text="@string/setup_store"
+            android:background="@drawable/wide_button"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonGoToStore"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/buttonSetupStore"
             android:layout_marginStart="24sp"
             android:layout_marginTop="8dp"
-            android:text="Go to Store"
-            android:visibility="gone" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/buttonProfileFragLogout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="40dp"
-            android:background="@drawable/button_bg"
-            android:text="Log out"
-            android:textColor="@color/white" />
+            android:text="@string/go_to_store"
+            android:background="@drawable/wide_button"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            />
 
 
     </RelativeLayout>
