--- a/app/src/main/res/layout/layout_cart_item_view.xml
+++ b/app/src/main/res/layout/layout_cart_item_view.xml
@@ -2,7 +2,13 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardUseCompatPadding="true"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    app:cardElevation="8dp"
+    app:cardCornerRadius="4dp"
+    >
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -11,19 +17,37 @@
         <ImageView
             android:id="@+id/imageViewLayoutCartItemProductImage"
             android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:background="@color/colorPrimary" />
+            android:layout_marginBottom="8dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/image_place_holder" />
 
         <TextView
             android:id="@+id/textViewLayoutCartItemProductName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_toEndOf="@id/imageViewLayoutCartItemProductImage"
             android:text="Product Name"
-            android:textSize="18sp"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/textRS"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewLayoutCartItemProductName"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_toEndOf="@id/imageViewLayoutCartItemProductImage"
+            android:text="@string/rs"
+            android:textColor="@color/colorRed"
+            android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
@@ -31,12 +55,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/textViewLayoutCartItemProductName"
-            android:layout_toEndOf="@id/imageViewLayoutCartItemProductImage"
+            android:layout_toEndOf="@id/textRS"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="Price"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+             />
+
+
+        <TextView
+            android:id="@+id/textUnit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewLayoutCartItemItemProductPrice"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_toEndOf="@id/imageViewLayoutCartItemProductImage"
+            android:text="Unit"
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/textViewLayoutCartItemItemUnit"
@@ -45,20 +82,21 @@
             android:layout_below="@id/textViewLayoutCartItemItemProductPrice"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_toEndOf="@id/imageViewLayoutCartItemProductImage"
+            android:layout_toEndOf="@id/textUnit"
             android:text="Unit"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="16sp"
+             />
 
 
         <ImageView
             android:id="@+id/imageViewLayoutCartItemRemoveItem"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_baseline_remove_24"
-            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_baseline_remove_24"
+            app:tint="@color/colorRed"
             />
 
 
@@ -73,7 +111,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_baseline_add_24"
-                android:layout_alignParentEnd="true"
+
                 app:tint="@color/colorPrimary"
                 android:layout_marginTop="8dp"
                 />
@@ -81,7 +119,7 @@
                 android:id="@+id/LayoutCartItemQuantityTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1"
+                android:text="@string/default_quantity"
                 android:textSize="32sp"
                 />
             <ImageView
@@ -89,7 +127,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_baseline_minus_24"
-                android:layout_alignParentEnd="true"
+
                 app:tint="@color/colorPrimary"
                 android:layout_marginTop="8dp"
                 />
