--- a/app/src/main/res/layout/layout_more_item.xml
+++ b/app/src/main/res/layout/layout_more_item.xml
@@ -14,9 +14,9 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_centerVertical="true"
-            android:background="@color/colorPrimary"
             android:layout_marginStart="16dp"
-            />
+            android:src="@drawable/image_place_holder"
+             />
         <TextView
             android:id="@+id/layoutMoreItemsProductNameTextView"
             android:layout_width="wrap_content"
