--- a/app/src/main/res/layout/layout_product_images.xml
+++ b/app/src/main/res/layout/layout_product_images.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
+        android:src="@drawable/image_place_holder"
         />
 
     <TextView
