--- a/app/src/main/res/menu/menu_logout.xml
+++ b/app/src/main/res/menu/menu_logout.xml
@@ -3,10 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <item android:id="@+id/menu_edit"
-        android:title="Edit"
-        android:icon="@drawable/ic_baseline_edit_24"
-        app:showAsAction="always"
+    <item android:id="@+id/menu_logout"
+        android:title="@string/log_out_button_text"
         />
 
 
